--- a/TemperatureController/Properties/launchSettings-sample.json
+++ b/TemperatureController/Properties/launchSettings-sample.json
@@ -1,11 +1,7 @@
-# simpler-way-iot-central-demo
-
-
-
-rename TemperatureController\Properties\launchSettings-sample.json to launchSettings.json
-
-fill in environment variables
-```
+{
+  "profiles": {
+    "TemperatureController": {
+      "commandName": "Project",
       "environmentVariables": {
         "IOTHUB_DEVICE_DPS_ID_SCOPE": "",
         "IOTHUB_DEVICE_DPS_ENDPOINT": "",
@@ -13,11 +9,6 @@ fill in environment variables
         "IOTHUB_DEVICE_DPS_DEVICE_ID": "",
         "IOTHUB_DEVICE_DPS_DEVICE_KEY": ""
       }
-```
-
-```
-> cd TemperaturController
-> dotnet build
-> dotnet run
-```
-
+    }
+  }
+}
